--- a/metrics-server/Chart.yaml
+++ b/metrics-server/Chart.yaml
@@ -7,5 +7,5 @@ appVersion: "0.6.1"
 dependencies:
 - name: metrics-server
   version: 3.8.2
-  repository: hqchk8sharbor-01.nespresso.com/chartrepo/infra
+  repository: cent7srv1.example.com/chartrepo/infra
 #  repository: http://test1.example.com:8080/chartrepo/infra
