--- a/kubewatch/Chart.yaml
+++ b/kubewatch/Chart.yaml
@@ -7,5 +7,5 @@ appVersion: "0.1.0"
 dependencies:
 - name: kubewatch
   version: 3.3.4
-  repository: https://192.168.56.11/chartrepo/infra
+  repository: https://cent7srv1.example.com/chartrepo/infra
  # repository: http://test1.example.com:8080/chartrepo/infra
