--- a/notejam/templates/serviceaccount.yaml
+++ b/notejam/templates/serviceaccount.yaml
@@ -1,12 +1,7 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "notejam.serviceAccountName" . }}
+  name: {{ .Values.appname }}-svcacc
   labels:
-    {{- include "notejam.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
+    app: {{ .Values.appname }}
+    env: {{ .Values.env }}
