--- a/notejam/values-nonprod.yaml
+++ b/notejam/values-nonprod.yaml
@@ -27,12 +27,12 @@ resources:
     memory: 128Mi
 
 # Autoscaling
-autoscaling:
-  enabled: true
-  minReplicas: 2
-  maxReplicas: 4
-  targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80
+#autoscaling:
+#  enabled: true
+#  minReplicas: 2
+#  maxReplicas: 4
+#  targetCPUUtilizationPercentage: 80
+#  targetMemoryUtilizationPercentage: 80
 
 # Sealed Secrets
 #applicationSecrets:
