--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -437,8 +437,8 @@ livenessProbe:
   enabled: true
   httpGet:
     path: /wp-admin/install.php
-    port: '{{ .Values.wordpressScheme }}'
-    scheme: '{{ .Values.wordpressScheme | upper }}'
+    port: "{{ .Values.wordpressScheme }}"
+    scheme: "{{ .Values.wordpressScheme | upper }}"
     ## If using an HTTPS-terminating load-balancer, the probes may need to behave
     ## like the balancer to prevent HTTP 302 responses. According to the Kubernetes
     ## docs, 302 should be considered "successful", but this issue on GitHub
@@ -466,8 +466,8 @@ readinessProbe:
   enabled: true
   httpGet:
     path: /wp-login.php
-    port: '{{ .Values.wordpressScheme }}'
-    scheme: '{{ .Values.wordpressScheme | upper }}'
+    port: "{{ .Values.wordpressScheme }}"
+    scheme: "{{ .Values.wordpressScheme | upper }}"
     ## If using an HTTPS-terminating load-balancer, the probes may need to behave
     ## like the balancer to prevent HTTP 302 responses. According to the Kubernetes
     ## docs, 302 should be considered "successful", but this issue on GitHub
@@ -495,8 +495,8 @@ startupProbe:
   enabled: false
   httpGet:
     path: /wp-login.php
-    port: '{{ .Values.wordpressScheme }}'
-    scheme: '{{ .Values.wordpressScheme | upper }}'
+    port: "{{ .Values.wordpressScheme }}"
+    scheme: "{{ .Values.wordpressScheme | upper }}"
     ## If using an HTTPS-terminating load-balancer, the probes may need to behave
     ## like the balancer to prevent HTTP 302 responses. According to the Kubernetes
     ## docs, 302 should be considered "successful", but this issue on GitHub
@@ -594,7 +594,7 @@ service:
 ingress:
   ## @param ingress.enabled Enable ingress record generation for WordPress
   ##
-  enabled: false
+  enabled: true
   ## @param ingress.pathType Ingress path type
   ##
   pathType: ImplementationSpecific
@@ -605,10 +605,10 @@ ingress:
   ## This is supported in Kubernetes 1.18+ and required if you have more than one IngressClass marked as the default for your cluster .
   ## ref: https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/
   ##
-  ingressClassName: ""
+  ingressClassName: "kubernetes.io/ingress.class: haproxy"
   ## @param ingress.hostname Default host for the ingress record. The hostname is templated and thus can contain other variable references.
   ##
-  hostname: wordpress.local
+  hostname: wordpress.example.com
   ## @param ingress.path Default path for the ingress record
   ## NOTE: You may need to set this to '/*' in order to use this with ALB ingress controllers
   ##
