--- a/wordpress/values.yaml
+++ b/wordpress/values.yaml
@@ -1109,10 +1109,10 @@ mariadb:
   ##      https://github.com/bitnami/containers/blob/main/bitnami/mariadb/README.md#creating-a-database-user-on-first-run
   ##
   auth:
-    rootPassword: ""
+    rootPassword: "bitnami"
     database: bitnami_wordpress
     username: bn_wordpress
-    password: ""
+    password: "bitnami"
   ## MariaDB Primary configuration
   ##
   primary:
